--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-body{text-align:center;
-    background:linear-gradient(#33ccff 0%, #4dff4d 100%);}    
-#hobby{border-radius:50%;}
+body{ text-align:center;
+    background-color: cyan;}
+.line{height:8px;
+background-color:black;
+width:150px;    
+    margin:8px auto;}
+img:hover{transform:scale(.8);}
+#app{width:100%;}
+#game{width:100%;}
