--- a/style.css
+++ b/style.css
@@ -1,9 +1,21 @@
-body{ text-align:center;
-    background-color: cyan;}
-.line{height:8px;
-background-color:black;
-width:150px;    
-    margin:8px auto;}
-img:hover{transform:scale(.8);}
-#app{width:100%;}
-#game{width:100%;}
+body {
+    text-align: center;
+    background: linear-gradient(#33ccff 0%, #4dff4d 100%);
+}
+
+.menu {
+    list-style: none;
+    position: absolute;
+    z-index: 52;
+}
+
+.link {
+    font-size: 20px;
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.link:hover {
+    background-color: aqua;
+}
